Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76181

Segfault in QtWebEngineCore::DelegatedNodeTreeUpdater::setupTextureContentNode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.11
    • 5.12.3, 5.12.10, 5.13.0
    • WebEngine
    • None
    • X11, Mesa DRI Intel(R) HD Graphics 520 (Skylake GT2)
    • 82eae6c457c85c9f51d08d5430d58e8359449576

      I unfortunately don't have a way to reproduce this, but sometimes when fullscreening a QtWebEngine window I get a segfault here:

      #0  0x00007f556b82936f in raise () at /usr/lib/libpthread.so.0
      #1  0x00007f556b8294d0 in <signal handler called> () at /usr/lib/libpthread.so.0
      #2  0x00007f5558e5780c in QtWebEngineCore::DelegatedNodeTreeUpdater::setupTextureContentNode(QSGTexture*, QRect const&, QRectF const&, QFlags<QSGImageNode::TextureCoordinatesTransformFlag>, QSGNode*) (this=this@entry=0x55b041349de0, texture=0x55b045993d40, rect=..., sourceRect=..., texCoordTransForm=texCoordTransForm@entry=...)
          at /tmp/makepkg/qt5-webengine-debug/src/qtwebengine-everywhere-src-5.12.3/src/core/delegated_frame_node.cpp:244
      #3  0x00007f5558e5b2f7 in QtWebEngineCore::DelegatedFrameNode::handleQuad(viz::DrawQuad const*, QSGNode*, QtWebEngineCore::DelegatedNodeTreeHandler*, QHash<unsigned int, QSharedPointer<QtWebEngineCore::ResourceHolder> >&, QtWebEngineCore::RenderWidgetHostViewQtDelegate*)
          (this=0x55b03e307700, quad=0x55b0459b3a50, currentLayerChain=0x0, nodeHandler=0x55b041349de0, resourceCandidates=..., apiDelegate=0x55b03cb757d0)
          at ../../../../qtwebengine-everywhere-src-5.12.3/src/3rdparty/chromium/components/viz/common/quads/draw_quad.h:76
      #4  0x00007f5558e5fc75 in QtWebEngineCore::DelegatedFrameNode::commit(QtWebEngineCore::ChromiumCompositorData*, std::vector<viz::ReturnedResource, std::allocator<viz::ReturnedResource> >*, QtWebEngineCore::RenderWidgetHostViewQtDelegate*)
          (this=this@entry=0x55b03e307700, chromiumCompositorData=<optimized out>, resourcesToRelease=resourcesToRelease@entry=0x55b03cb6aed0, apiDelegate=<optimized out>)
          at /tmp/makepkg/qt5-webengine-debug/src/qtwebengine-everywhere-src-5.12.3/src/core/delegated_frame_node.cpp:991
      #5  0x00007f5558e4b085 in QtWebEngineCore::Compositor::updatePaintNode(QSGNode*) (this=0x55b03cb6ae80, oldNode=<optimized out>)
          at /tmp/makepkg/qt5-webengine-debug/src/qtwebengine-everywhere-src-5.12.3/src/core/compositor.cpp:132
      #6  0x00007f5560c6bc50 in QQuickWindowPrivate::updateDirtyNode(QQuickItem*) () at /usr/lib/libQt5Quick.so.5
      #7  0x00007f5560c6c0c4 in QQuickWindowPrivate::updateDirtyNodes() () at /usr/lib/libQt5Quick.so.5
      #8  0x00007f5560c6d607 in QQuickWindowPrivate::syncSceneGraph() () at /usr/lib/libQt5Quick.so.5
      #9  0x00007f5560d3593a in QQuickRenderControl::sync() () at /usr/lib/libQt5Quick.so.5
      #10 0x00007f5565e433c5 in  () at /usr/lib/libQt5QuickWidgets.so.5
      #11 0x00007f5565e435a7 in  () at /usr/lib/libQt5QuickWidgets.so.5
      #12 0x00007f556986aa3b in QObject::event(QEvent*) (this=this@entry=0x55b03cb757a0, e=e@entry=0x7fff54dd78d0) at kernel/qobject.cpp:1241
      

      bt full output: https://paste.the-compiler.org/view/ee1f6f97

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kiburtse Kirill Burtsev
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes