Match render pass structures check to actual tree traversal loop

Mismatch in render tree on update may lead to crash when:
* less scenegraph nodes are updated than created - hence crash on
  rendering  since not all textures are replaced and old ones are
  deleted on previous run in scope of 'commit' method
* more quads are processed than were on new tree create - hence crash on
  an attempt to setup non-existent node in DelegatedNodeTreeUpdater.
Match logic of 'areRenderPassStructuresEqual' to main 'commit' method loop.

Fixes: QTBUG-76181
Fixes: QTBUG-85802
Change-Id: Ib0c6dbec8100a068948a4ca8c385ba516ba5c504
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>